src/global.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  background-color: #fff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@font-face {
  font-family: 'Arial';
  src: url('/public/fonts/arial/ARIAL.TTF') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Aeonik';
  src: url('/public/fonts/aeonik/Aeonik-Regular.ttf') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
  background-attachment: scroll;
  overflow: hidden;
}

html.lenis {
  height: auto;
}


body {
  color: #333;
  background-color: #fff;
  min-height: 100%;
  margin: 0;
  font-family: Arial, sans-serif;
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  scroll-behavior: smooth;
    min-height: 100dvh;
}

.navbar {
  z-index: 100;
  column-gap: 1vw;
  row-gap: 0px;
  background-color: #fff;
  width: 100%;
  height: 46px;
  padding: 0 1vw;
  position: fixed;
  top: 0;
}

.nav-inner {
  column-gap: 1dvw;
}

.nav-logo {
  width: 1.5rem;
  max-width: 100%;
  display: inline-block;
}

.nav-info {
  color: #1d1d1d;
  white-space: nowrap;
  cursor: default;
  font-family: Aeonik, sans-serif;
  font-size: 1vw;
  line-height: 120%;
  text-decoration: none;
}

.nav-link {
  color: #1d1d1d;
  white-space: nowrap;
  font-family: Aeonik, sans-serif;
  font-size: 1vw;
  line-height: 120%;
  text-decoration: none;
  cursor: pointer;
}

.header {
  aspect-ratio: 2;
  justify-content: center;
  align-items: center;
  display: flex;
  position: relative;
  overflow: hidden;
}

.module-hero {
  padding-left: 1vw;
  padding-right: 1vw;
}

.text-studio-indent {
  margin-left: 25%;
}

.full-video {
  box-sizing: border-box;
  aspect-ratio: 2;
  object-fit: cover;
  background-color: #f5f4f2;
  border-radius: 8px;
  justify-content: center;
  align-items: center;
  width: 100%;
  display: block;
  overflow: hidden;
}

.w-embed::before, 
.w-embed::after {
    content: " ";
    /* grid-area: 1 / 1 / 2 / 2; */
    display: table;
}

.w-inline-block {
  max-width: 100%
}

.hero {
  color: #1d1d1d;
  letter-spacing: -.1vw;
  cursor: default;
  font-family: Aeonik, sans-serif;
  font-size: 4.4vw;
  line-height: 100%;
  display: inline;
}

.word {
  display: inline-block;
}

.project-block-title {
  color: #fff;
  cursor: none;
  font-size: 1dvw;
  line-height: 140%;
  text-decoration: none;
  transition: opacity .2s;
  overflow: hidden;
}

.project-name-container {
  column-gap: 0.6vw;
  row-gap: 0.6vw;
  justify-content: flex-start;
  align-items: center;
  width: 15dvw;
  display: flex;
}

.text-black {
  color: #000;
}

.text-white {
  color: #fff;
}

.studio-h4 {
  color: #1d1d1d;
  text-align: left;
  cursor: default;
  font-family: Aeonik, sans-serif;
  font-size: 1vw;
  font-weight: 400;
  line-height: 130%
}

.studio-h4.expertise-h3 {
  font-size: 4vw;
  line-height: 100%;
}

.studio-h4.expertise-p {
  font-size: 1vw;
}

.hero-link {
  color: #fff;
  text-align: center;
  vertical-align: text-bottom;
  background-color: #1d1d1d;
  border-radius: 2vw;
  justify-content: center;
  align-items: center;
  margin-left: 1.4vw;
  padding: .8vw 1.4vw;
  font-family: Aeonik, sans-serif;
  font-size: 1vw;
  text-decoration: none;
  display: inline-block;
}

.hero-link:hover {
  color: #1d1d1d;
  background-color: #e5e5e5;
}

.hero-slider-container {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 1vw;
}

.hero-video-container::before {
  content: " ";
  display: table;
}

.overflow-overlay {
  z-index: 10;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
}

.transition-opacity {
  transition: opacity .25s ease-in-out;
  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

.no-opacity {
  opacity: 0;
  pointer-events: none;
}

.full-opacity {
  opacity: 1;
}


.home-video-container {
  justify-content: center;
  border-radius: .5rem;
  display: flex;
  position: relative;
  overflow: hidden;
}

.landscape {
  max-width: 64vw;
  height: 100%
}

.portrait {
  max-width: 33vw;
  height: 100%
}

.work-title {
  pointer-events: none;
  letter-spacing: -.2vw;
  text-transform: uppercase;
  white-space: nowrap;
  word-break: keep-all;
  overflow-wrap: break-word;
  font-size: 7vw;
  line-height: .9;
  overflow: hidden;
}

.work-title.gray {
  color: #E5E5E5
}

.work-title.projects-title {
  font-size: 1vw;
  line-height: 110%;
  transition: opacity .2s;
  overflow: hidden;
  color: #1d1d1d
}

.work-title.mr-drag {
  margin-right: 4vw;
}

.text {
  font-family: Aeonik, sans-serif;
  cursor: default;
  color: #1d1d1d;
}

.text.description-info-awards {
  font-size: .9vw;
  line-height: 1.1vw;
}

.text.label-info-awards {
  color: #1d1d1d4d;
}

.work-h4 {
  font-size: 1vw;
  line-height: 130%;
}

.work-h4.gray {
  color: #9a9a9a;
}

.logo-marquee {
  max-width: 26vw;
}

.expertise-container {
  column-gap: 2vw;
  row-gap: 2vw;
  cursor: auto;
  border-radius: 8px;
  height: 100%;
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding-top: 0;
  padding-left: 0;
  padding-right: 0;
  text-decoration: none;
  transition: padding .4s cubic-bezier(.23, 1, .32, 1);
  display: flex;
  overflow: hidden;
}

.expertise-container.blue,
.expertise-container.magenta,
.expertise-container.green {
  transition: background-color .4s 
    cubic-bezier(.23, 1, .32, 1), padding .4s 
    cubic-bezier(.23, 1, .32, 1);
}

.expertise-container.blue:hover {
  background-color: #d5f2f6;;
}

.expertise-container.magenta:hover {
  background-color: #fbefff;;
}
/* ... */

